@@ -80,7 +80,7 @@ Figured_bass_engraver::process_music ()
 ENTER_DESCRIPTION(Figured_bass_engraver,
 /* descr */       "Make figured bass numbers.",
 /* creats*/       "BassFigure",
-/* accepts */     "general-music",
+/* accepts */     "rest-event bass-figure-event",
 /* acks  */      "",
 /* reads */       "",
 /* write */       "");
