@@ -567,7 +567,7 @@ Mensural_ligature_engraver::acknowledge_grob (Grob_info info)
 ENTER_DESCRIPTION (Mensural_ligature_engraver,
 /* descr */       "Handles Mensural_ligature_requests by glueing special ligature heads together.",
 /* creats*/       "MensuralLigature",
-/* accepts */     "general-music",
+/* accepts */     "",
 /* acks  */      "ligature-head-interface note-head-interface rest-interface",
 /* reads */       "",
 /* write */       "");
